# timeseries-transformer-benchmark

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
configs/: pipeline_config.yaml
configs/model_configs/: patchtst.yaml  tft.yaml  xgboost.yaml
databricks/cluster_config/: cluster_config.json
databricks/jobs/: training_job.json
databricks/notebooks/: 01_EDA_spark.py  02_feature_engineering.py  03_data_validation.py  04_baseline_models.py  05_deep_learning_tft.py  06_deep_learning_patchtst.py  07_benchmark_results.py  08_explainability.py
docker/: Dockerfile  docker-compose.yml
src/data/: feature_engineering.py  ingestion.py  preprocessing.py
src/evaluation/: benchmark.py  metrics.py  statistical_tests.py
src/explainability/: attention_viz.py  counterfactual.py  shap_explainer.py  tft_interpretability.py
src/models/: registry.py
src/models/baselines/: prophet.py  xgboost_ts.py
src/models/deep/: nbeats_nhits.py  patchtst.py  tft.py
src/serving/: api.py  schemas.py
src/training/: trainer.py
src/utils/: config.py  logger.py
tests/integration/: test_api.py  test_pipeline_e2e.py
tests/unit/: test_feature_engineering.py  test_metrics.py  test_preprocessing.py
